--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,6 +7,23 @@ html{
 a {
 text-decoration: none;
 }
+.et-hero-tabs{
+    background: url(../img/2551513.jpg) !important;
+    background-size : 100% 100% !important;
+    background-repeat: no-repeat;
+    -webkit-animation: fadein 1.5s;
+    
+
+}
+.et-hero-tabs:before{
+    content: "";
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left : 0px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
 .et-hero-tabs,
 .et-slide {
@@ -21,15 +38,74 @@ background: #eee;
     padding: 0 2em;
 
 }
+@keyframes blink {
+    from,to {
+        border-color: transparent
+    }
+    
+    50%{
+        border-color: white;
+    }
+}
+@keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
+  @keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to{
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 .et-hero-tabs h1 {
-    font-size: 2rem;
+    border-right: 0.1em solid white;
+    animation: blink 1s step-end infinite;
+    font-size: 4vw;
+    white-space: pre;
+    line-height: 1;
+    letter-spacing: 0.1rem;
+    color: white;
+    position: relative;
     margin: 0;
-    letter-spacing: 1rem;
 }
 .et-hero-tabs h3 {
-    font-size: 1rem;
-    letter-spacing: 0.3rem;
-    opacity: 0.6;
+    font-size: 3vw;
+    letter-spacing: 0.1rem;
+    color: white;
+    position: relative;
 }
 .et-hero-tabs-container {
 display: flex;
