--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,37 +7,6 @@ html{
 a {
 text-decoration: none;
 }
-.et-hero-tabs{
-    background: url(../img/2551513.jpg) !important;
-    background-size : 100% 100% !important;
-    background-repeat: no-repeat;
-    -webkit-animation: fadein 1.5s;
-    
-
-}
-.et-hero-tabs:before{
-    content: "";
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left : 0px;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.et-hero-tabs,
-.et-slide {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-height: 100vh;
-position: relative;
-background: #eee;
-    text-align: center;
-    padding: 0 2em;
-
-}
 @keyframes blink {
     from,to {
         border-color: transparent
@@ -47,17 +16,7 @@ background: #eee;
         border-color: white;
     }
 }
-@keyframes slidein {
-    from {
-      margin-left: 100%;
-      width: 300%
-    }
-  
-    to {
-      margin-left: 0%;
-      width: 100%;
-    }
-  }
+
   @keyframes fadein {
     from {
         opacity:0;
@@ -90,30 +49,57 @@ background: #eee;
         opacity: 1;
     }
 }
+.et-hero-tabs{
+    background: url(../img/main.png) !important;
+    background-size : 100% 100% !important;
+    background-repeat: no-repeat !important;
+    -webkit-animation: fadein 1.5s;
+    
+
+}
+#mypic{
+    width: 100px;
+    height: 100px;
+    top : -10%;
+    position: relative;
+}
+.et-slide{
+    background-color: #eee;
+    width: 100%;
+}
+.et-hero-tabs{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+height: 100vh;
+position: relative;
+background: #eee;
+    text-align: center;
+    padding: 0 2em;
+
+}
+
 .et-hero-tabs h1 {
     border-right: 0.1em solid white;
     animation: blink 1s step-end infinite;
-    font-size: 4vw;
+    font-size: 3.6vw;
     white-space: pre;
     line-height: 1;
     letter-spacing: 0.1rem;
     color: white;
     position: relative;
+    top : -10%;
     margin: 0;
 }
-.et-hero-tabs h3 {
-    font-size: 3vw;
-    letter-spacing: 0.1rem;
-    color: white;
-    position: relative;
-}
+
 .et-hero-tabs-container {
 display: flex;
 flex-direction: row;
-position: absolute;
 bottom: 0;
+position: fixed;
 width: 100%;
-height: 70px;
+height: 55px;
 box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 background: #fff;
 z-index: 10;
@@ -121,7 +107,7 @@ z-index: 10;
 }
 .et-hero-tabs-container--top {
     position: fixed;
-    top: 0;
+    top : 0;
 }
 .et-hero-tab {
 display: flex;
@@ -136,7 +122,7 @@ letter-spacing: 0.1rem;
 }
 .et-hero-tab:hover {
     color:white;
-background: rgba(102,177,241,0.8);
+background: darkgray;
     transition: all 0.5s ease;
 }
 
@@ -149,8 +135,8 @@ background: #66B1F1;
 transition: left 0.3s ease;
 }
 
-@media (min-width: 800px) {
-.et-hero-tabs,
+@media (min-width: 768px) {
+/* .et-hero-tabs,
 .et-slide h1{
     font-size: 3rem;
     
@@ -160,5 +146,19 @@ font-size: 1rem;
 }
 .et-hero-tab {
     font-size: 1rem;
+} */
+.et-hero-tabs-container {
+    height: 70px;
 }
+#mypic{
+    width: 200px !important;
+    height: 200px;
+}
+html{
+    font-size : 20px
+}
+.et-hero-tabs h1 {
+    font-size : 3.2vw;
+}
+
 }
