--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,6 +3,7 @@ body {
 }
 html{
     scroll-behavior: smooth; 
+    font-size : 14px;
 }
 a {
 text-decoration: none;
@@ -64,8 +65,10 @@ text-decoration: none;
     position: relative;
 }
 .et-slide{
-    background-color: #eee;
+    background-color: white;
     width: 100%;
+    padding-top: 3%;
+    padding-bottom : 3%;
 }
 .et-hero-tabs{
 display: flex;
