--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,9 +1,11 @@
 body {
     font-family: "Century Gothic", 'Lato', sans-serif;
+    color : #345;
 }
 html{
     scroll-behavior: smooth; 
     font-size : 14px;
+    font-weight: 300;
 }
 a {
 text-decoration: none;
@@ -105,7 +107,7 @@ width: 100%;
 height: 55px;
 box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 background: #fff;
-z-index: 10;
+z-index: 996;
 
 }
 .et-hero-tabs-container--top {
