--- a/src/css/project.css
+++ b/src/css/project.css
@@ -1,13 +1,3 @@
-@keyframes fadein2 {
-    from {
-        opacity:0;
-        top : 5%;
-    }
-    to{
-        opacity: 1;
-        top : 0;
-    }
-}
 .slick-dots{
     position: unset !important;
     width: 100%;
@@ -39,16 +29,41 @@
     font-size: 40px !important;
 
 }
+#projectText span{
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    display: inline-block;
+    margin-right: 4px;
+    padding-left: 4px;
+    padding-bottom : 2px;
+    padding-right: 4px;
+    opacity: .75;
+    margin-bottom : 5px;
+}
 .projectImg{
-    width : 550px;
-    height: 550px;
+    width: auto;
+    height: 450px;
+    max-width: 500px;
+    border-radius: 10px;
     display: inline !important;
+}
+#projectImg .projectImg{
+    width: auto;
+    max-width: 70vw;
+    max-height: 70vh;
+    height: auto;
 }
 #projectText{
     display: inline-block;
     text-align: left;
     padding-left: 3%;
     vertical-align: top;
+    max-width: 42%;
+    margin-bottom: 10px;
+}
+#projectText p{
+    margin-right: 10px;
 }
 #close{
     font-family: 'Nunito', sans-serif;
@@ -70,23 +85,47 @@
     z-index: 997;
     display: none;
 }
-@media(max-width : 500px){
+@media(max-width : 600px){
     .projectImg{
-        width : 100%;
-        height : 80vw;
+        width : 100% !important;
+        height: auto !important;
+        max-height : 70vw !important;
+        border-radius: 0 !important;
     }
+    #projectText{
+        max-width: 100%;
+        font-size: 0.8rem;
+    }
+    #projectImg .projectImg{
+        width : 100% !important;
+        height: auto !important;
+        max-height : 110vw !important;
+        border-radius: 0 !important;
+        max-width: unset;
+    }
+    .slick-prev, .slick-next{
+        top : 40% !important;
+    }
+   
 }
-@media(max-width : 768px) and (min-width : 501px) {
+@media(max-width : 768px) and (min-width : 601px) {
     .projectImg{
-        width : 246px;
+        width: auto;
         height: 246px;
+        max-width: 300px;
     }
+    #projectText{
+        font-size: 0.9rem;
+    }
+   
 }
 @media(max-width : 1024px) and (min-width : 769px) {
     .projectImg{
-        width : 300px;
+        width: auto;
         height: 300px;
+        max-width: 400px;
     }
+    
 }
 @media(min-width : 1025px){
     .slick-dots li{
