--- a/src/css/project.scss
+++ b/src/css/project.scss
@@ -1,19 +1,30 @@
 .slick-dots{
-    position: unset !important;
-    width: 100%;
+    position: relative !important;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 10px;
+    width: 200px !important;
     padding: 0;
     margin: 0;
     list-style: none;
+    background-color: darkgray;
     text-align: center;
     margin-bottom: 30px;
+    height : 25px !important;
     li{
         width : 40px !important;
         height : 40px !important;
-        top : 0 !important;
+        top : -8px !important;
         &:hover{
             border : 2px solid skyblue;
         }
+        img{
+            border-radius: 7px;
+        }
     }
+}
+#projectImg .slick-slider{
+    visibility: visible;
 }
 .slick-slider{
     visibility: hidden;
@@ -128,7 +139,7 @@
     .projectImg{
         width : 100% !important;
         height: auto !important;
-        max-height : 70vw !important;
+        max-height : 60vw !important;
         border-radius: 0 !important;
     }
     #projectText{
@@ -167,15 +178,19 @@
     
 }
 @media(min-width : 1025px){
-    .slick-dots li{
+    .slick-dots {
+        height: 37px !important;
+        width: 300px !important;
+        li{
         width : 60px !important;
         height : 60px !important;
-        top : 0 !important;
+        top : -11px !important;
         img{
             width : 60px !important;
             height : 60px !important;
         }
     }
+}
     .slick-next{
         right: 55px !important;
     }
