이미지 용량 축소

--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -194,3 +194,9 @@ html{
 }
 
 }
+@media(max-width : 499px){
+    .slide{
+        padding-top : 6% !important;
+        padding-bottom : 6% !important;
+    }
+}
