--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -80,14 +80,7 @@ text-decoration: none;
         opacity: 1;
     }
 }
-.mainSec{
-    background: url(../img/main.png) !important;
-    background-size : 100% 100% !important;
-    background-repeat: no-repeat !important;
-    -webkit-animation: fadein 1.5s;
-    
 
-}
 #mypic{
     width: 100px;
     height: 100px;
@@ -110,7 +103,7 @@ text-decoration: none;
     background: #eee;
     text-align: center;
     padding: 0 2em;
-    background: url(../img/main.png) !important;
+    background: url(/MyGitPage/images/main.png) !important;
     background-size : 100% 100% !important;
     background-repeat: no-repeat !important;
     -webkit-animation: fadein 1.5s;
