--- a/src/css/project.scss
+++ b/src/css/project.scss
@@ -80,7 +80,15 @@
     border-radius: 10px;
     display: inline !important;
 }
-.stackSpan span{
+
+#projectText{
+    display: inline-block;
+    text-align: left;
+    padding-left: 3%;
+    vertical-align: top;
+    max-width: 42%;
+    margin-bottom: 20px;
+    span{
         background-color: black;
         color: white;
         border-radius: 10px;
@@ -91,15 +99,7 @@
         padding-right: 4px;
         opacity: .75;
         margin-bottom : 5px;
-}
-#projectText{
-    display: inline-block;
-    text-align: left;
-    padding-left: 3%;
-    vertical-align: top;
-    max-width: 42%;
-    margin-bottom: 20px;
-    
+    }
     p{
         margin-right: 10px;
     }
@@ -112,16 +112,11 @@
     }
 }
 #betweenP{
-    
+    margin-right: 2px !important;
+    margin-left: 2px !important;
+    font-weight: 600;
+    font-size: 15px;
     display: inline !important;
-    p{
-        margin : 0;
-        margin-right: 2px !important;
-        margin-left: 2px !important;
-        font-weight: 600;
-        font-size: 15px;
-        display: inline;
-    }
 }
 #close{
     font-family: 'Nunito', sans-serif;
