--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -103,7 +103,7 @@ text-decoration: none;
     background: #eee;
     text-align: center;
     padding: 0 2em;
-    background: url(//images/main.png) !important;
+    background: url(/MyGitPage/images/main.png) !important;
     background-size : 100% 100% !important;
     background-repeat: no-repeat !important;
     -webkit-animation: fadein 1.5s;
