프로젝트 nav 배경바 width unset

--- a/src/css/project.scss
+++ b/src/css/project.scss
@@ -11,6 +11,7 @@
 .slick-dots{
     position: relative !important;
     left: 50%;
+    display: inline-block;
     transform: translateX(-50%);
     border-radius: 10px;
     width: unset !important;
