프로젝트 dock 배경바 width unset

--- a/src/css/project.scss
+++ b/src/css/project.scss
@@ -10,7 +10,7 @@
 }
 .slick-dots{
     position: relative !important;
-    display: inline-block;
+    display: inline-block !important;
     border-radius: 10px;
     width: unset !important;
     padding: 0;
