--- a/src/css/aboutMe.scss
+++ b/src/css/aboutMe.scss
@@ -45,7 +45,7 @@
     font-weight: 600;
     width: 450px;
     height: 400px;
-    background: url(/MyGitPage/images/com.png) !important;
+    // background: url(/MyGitPage/images/com.png) !important;
     background-size : 100% 100% !important;
     background-repeat: no-repeat !important;
     position: relative;
